tests/parser/parse-when.1.bad.error
error: Malformed when expression
  --> test:4:16
   |
 4 |  (define f (when))
   |                 ^ expected a predicate
