tests/parser/parse-when.1.bad.coalton
;; BAD: Parse When
(package test-parser)

(define f (when))
